gstvalidate fails to link with older (2.50) glib
Hi,
I have cloned, setup and built gst-build master (> 1.6.0, sha:gst-build@ced7f9d5) doing the following:
$ git clone https://gitlab.freedesktop.org/gstreamer/gst-build.git
$ cd gst-build
{
/gst-build}$ meson build/
{/gst-build}$ ninja -C build/
When running 'ninja -C build' I get a load of strange warnings, e.g. warning: implicit declaration of function ‘memset’ and a fail:
FAILED: subprojects/gst-devtools/validate/gst/validate/libgstvalidate-1.0.so.0.1700.0
...
subprojects/gst-devtools/validate/gst/validate/28db7b6@@gstvalidate-1.0@sha/gst-validate-utils.c.o: In function '_file_get_structures':
/home/matslm/gst-build/build/../subprojects/gst-devtools/validate/gst/validate/gst-validate-utils.c:748: undefined reference to 'g_file_peek_path'
/home/matslm/gst-build/build/../subprojects/gst-devtools/validate/gst/validate/gst-validate-utils.c:761: undefined reference to 'g_file_new_build_filename'
/home/matslm/gst-build/build/../subprojects/gst-devtools/validate/gst/validate/gst-validate-utils.c:770: undefined reference to 'g_file_peek_path'
/home/matslm/gst-build/build/../subprojects/gst-devtools/validate/gst/validate/gst-validate-utils.c:770: undefined reference to 'g_file_peek_path'
collect2: error: ld returned 1 exit status
See attachment 'meson_build.log' for 'meson build/'-output
See attachment 'ninja_build.log' for 'ninja -C build/'-output